<resources>
    <string name="app_name">GT库</string>
    <string name="gt_string_album_upload">相册图片</string>
    <string name="gt_string_photograph">拍摄照片</string>
    <string name="gt_string_video">相册视频</string>
    <string name="gt_string_shoot_video">拍摄视频</string>
    <string name="gt_string_upload_files">其他文件</string>
    <string name="gt_string_cancel">取消</string>
    <string name="AccessibleServiceDescribe">该功能需要成为您的管家，需要获取该权限用于更好的服务于您。</string>
</resources>